# his

./: .gitignore  Cargo.toml  README.md  config.example.toml  dev-test.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  provider.rs  renderer.rs  repository.rs  session.rs  tui.rs
src/agent/: claude.rs  codex.rs  mod.rs  pi.rs  provider.rs  session.rs
src/agent/provider/: codex.rs  mod.rs  pi.rs
src/tui/: app.rs  markdown.rs  runtime.rs  session_detail.rs  session_list.rs
tests/fixtures/claude/: session.jsonl
tests/fixtures/codex/: session.jsonl
tests/fixtures/pi/: session.jsonl
