[package]
name = "his"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version="1.0.228", features = ["derive", "default"] }
serde_json = "1.0.150"
tui-markdown = "=0.3.8"
