[package]
name = "his"
version = "0.1.0"
edition = "2024"
description = "Browse and read local coding-agent session history"
repository = "https://github.com/heyjstn/his"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version="1.0.228", features = ["derive", "default"] }
serde_json = "1.0.150"
shellexpand = { version = "3.1.1", default-features = false, features = ["base-0"] }
toml = "0.9.12"
tui-markdown = "=0.3.8"
walkdir = "2.5.0"
